
The 'enabled' and 'random_enabled' configuration options are now gone.
Instead the state survives from one run of the server to the next.
'disable now' is gone as well - if you want to emulate it disable
playing and then scratch the current track.

The 'pick' plugin has been abolished.  All the logic formerly done there
is now built into the server, where it can be done much more
efficiently.

** disorderfm

There is a new command line tool called 'disorderfm' which is designed
for filename translation on (for instance) digital audio repositories.
It is not yet feature-complete.  See its man page for additional
details.

** Build And Configuration

You can control which components are built with new --with options.  See
README.

options.transform and the 'transform' web option have gone, replaced
with a 'transform' configuration command.  Both this and 'namepart' are
now optional.

* Changes up to version 1.5.1

** Web Interface

Correct regexp for non-alpha tracks.

* Changes up to version 1.5

** Web Interface

Regexp-based filtering of tracks (for instance as used by the initial
'Choose' page) now does the regexp matching in the server, limiting the
amount of data transferred to the web interface only to be discarded.

** Client

Regexp-base filtering of tracks is now available to the command line
client.

** Server

New server_nice, speaker_nice and rescan_nice configuration options
allow independent control of process priorities.

Scratches are now attributed to the user who requested them.

Bugs fixed:
  A file descriptor was leaked for each track played.
  The amount of a track played so far was not reported.
  The speaker process could crash on underrun.
  The server would crash if you paused a non-pause capable track.
  Regexp matching in the file and directory list commands was not
  reliable.
  Handling of variable-argument commands in the client was broken.

* Changes up to version 1.4

** General
